--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,10 @@
   <head> </head>
   <body>
     <h1>Chat App</h1>
+    <form id="chatMessage">
+      <input type="text" id="message" placeholder="type your message" />
+      <button id="submit">Send</button>
+    </form>
     <script src="/socket.io/socket.io.js"></script>
     <script src="./js/chat.js"></script>
   </body>
