implement location sharing

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
       <input type="text" id="message" placeholder="type your message" />
       <button id="submit">Send</button>
     </form>
+    <br />
+    <button id="sendLocation">send location</button>
     <script src="/socket.io/socket.io.js"></script>
     <script src="./js/chat.js"></script>
   </body>
