--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,23 @@
   <head> </head>
   <body>
     <h1>Chat App</h1>
+    <div id="messages"></div>
+
     <form id="chatMessage">
       <input type="text" id="message" placeholder="type your message" />
       <button id="submit">Send</button>
     </form>
+    <script id="message-template" type="text/html">
+      <div>
+        <p>{{message}}</p>
+      </div>
+    </script>
     <br />
     <button id="sendLocation">send location</button>
     <script src="/socket.io/socket.io.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.6.0/qs.min.js"></script>
     <script src="./js/chat.js"></script>
   </body>
 </html>
