render location in browser

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,11 @@
         <p>{{message}}</p>
       </div>
     </script>
+    <script id="location-template" type="text/html">
+      <div>
+        <p><a href="{{location}}" target="_blank">My Current location</a></p>
+      </div>
+    </script>
     <br />
     <button id="sendLocation">send location</button>
     <script src="/socket.io/socket.io.js"></script>
