--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,15 @@
     </form>
     <script id="message-template" type="text/html">
       <div>
-        <p>{{message}}</p>
+        <p>{{createdAt}} - {{message}}</p>
       </div>
     </script>
     <script id="location-template" type="text/html">
       <div>
-        <p><a href="{{location}}" target="_blank">My Current location</a></p>
+        <p>
+          {{createdAt}} -
+          <a href="{{location}}" target="_blank">My Current location</a>
+        </p>
       </div>
     </script>
     <br />
