--- a/public/index.html
+++ b/public/index.html
@@ -1,28 +1,46 @@
 <html>
-  <head> </head>
+  <head>
+    <title>Chat app</title>
+    <link rel="icon" href="./img/favicon.png" />
+    <link rel="stylesheet" href="./css/styles.min.css" />
+  </head>
   <body>
-    <h1>Chat App</h1>
-    <div id="messages"></div>
+    <div class="chat">
+      <div class="chat__sidebar"></div>
+      <div class="chat__main">
+        <div id="messages" class="chat__messages"></div>
+        <div class="compose">
+          <form id="chatMessage">
+            <input type="text" id="message" placeholder="type your message" />
+            <button id="submit">Send</button>
+          </form>
+          <button id="sendLocation">send location</button>
+        </div>
+      </div>
+    </div>
 
-    <form id="chatMessage">
-      <input type="text" id="message" placeholder="type your message" />
-      <button id="submit">Send</button>
-    </form>
     <script id="message-template" type="text/html">
-      <div>
-        <p>{{createdAt}} - {{message}}</p>
+      <div class="message">
+        <p>
+          <span class="message__name">Some Username</span>
+          <span class="message__meta">{{createdAt}}</span>
+        </p>
+        <p>{{message}}</p>
       </div>
     </script>
     <script id="location-template" type="text/html">
-      <div>
+      <div class="message">
         <p>
-          {{createdAt}} -
+          <span class="message__name">Some Username</span>
+          <span class="message__meta">{{createdAt}}</span>
+        </p>
+        <p>
           <a href="{{location}}" target="_blank">My Current location</a>
         </p>
       </div>
     </script>
     <br />
-    <button id="sendLocation">send location</button>
+
     <script src="/socket.io/socket.io.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
