--- a/public/index.html
+++ b/public/index.html
@@ -5,46 +5,22 @@
     <link rel="stylesheet" href="./css/styles.min.css" />
   </head>
   <body>
-    <div class="chat">
-      <div class="chat__sidebar"></div>
-      <div class="chat__main">
-        <div id="messages" class="chat__messages"></div>
-        <div class="compose">
-          <form id="chatMessage">
-            <input type="text" id="message" placeholder="type your message" />
-            <button id="submit">Send</button>
-          </form>
-          <button id="sendLocation">send location</button>
-        </div>
+    <div class="centered-form">
+      <div class="centered-form__box">
+        <h1>Join</h1>
+        <form action="./chat.html">
+          <label> Display Name </label>
+          <input
+            type="text"
+            name="username"
+            placeholder="Display Name"
+            required
+          />
+          <label>Room</label>
+          <input type="text" name="room" placeholder="Room" required />
+          <button>Join</button>
+        </form>
       </div>
     </div>
-
-    <script id="message-template" type="text/html">
-      <div class="message">
-        <p>
-          <span class="message__name">Some Username</span>
-          <span class="message__meta">{{createdAt}}</span>
-        </p>
-        <p>{{message}}</p>
-      </div>
-    </script>
-    <script id="location-template" type="text/html">
-      <div class="message">
-        <p>
-          <span class="message__name">Some Username</span>
-          <span class="message__meta">{{createdAt}}</span>
-        </p>
-        <p>
-          <a href="{{location}}" target="_blank">My Current location</a>
-        </p>
-      </div>
-    </script>
-    <br />
-
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.6.0/qs.min.js"></script>
-    <script src="./js/chat.js"></script>
   </body>
 </html>
